--- a/demos/jans-tarp/src/options/options.css
+++ b/demos/jans-tarp/src/options/options.css
@@ -178,6 +178,23 @@ label.light {
   width: 0px !important;
 }
 
+.form-container {
+  position: relative;
+}
+
+.loader-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.7); /* Semi-transparent overlay */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1; /* Ensure loader stays above the form */
+}
+
 @media screen and (min-width: 480px) {
 
   form {
